tests/specs/export_private.txt
{ "private": true }
# mod.ts
const foo: string = "foo";
export { foo };

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:7
  | 
1 | const foo: string = "foo";
  |       ^

# output.txt
Defined in file:///mod.ts:0:7

const foo: string


# output.json
{
  "imports": [],
  "symbols": [
    {
      "name": "foo",
      "declarations": [
        {
          "location": {
            "filename": "file:///mod.ts",
            "line": 0,
            "col": 6,
            "byteIndex": 6
          },
          "declarationKind": "export",
          "kind": "variable",
          "def": {
            "tsType": {
              "repr": "string",
              "kind": "keyword",
              "value": "string"
            },
            "kind": "const"
          }
        }
      ]
    }
  ]
}
